[Win] MSVC reports "DownloadBundleWin.cpp(87): error C2362: initialization of 'magic' is skipped by 'goto exit'" with /std:c++20 https://bugs.webkit.org/show_bug.cgi?id=234504 <rdar://problem/86755997>

Reviewed by Darin Adler.

* platform/network/win/DownloadBundleWin.cpp:
(WebCore::DownloadBundle::appendResumeData): Use fclose directly.
(WebCore::DownloadBundle::extractResumeData): Ditto.
(WebCore::DownloadBundle::fileCloser): Deleted.



Canonical link: https://commits.webkit.org/245567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287432 268f45cc-cd09-0410-ab3c-d52691b4dbfc